# tp_analisis_de_datos

./: README.md  pyproject.toml
data/: variables.csv
notebooks/: EDA_RU.ipynb  Outliers.ipynb  Variable_selection.ipynb  aporte_luisD.ipynb  na_tratamiento.ipynb
