[project]
name = "tp-analisis-de-datos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.7",
    "missingno>=0.5.2",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]
